--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,4 +1,5 @@
-.login-container {
+
+.login-form {
   max-width: 400px;
   margin: 50px auto;
   padding: 20px;
@@ -6,16 +7,18 @@
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   text-align: center;
-}
-
-.login-container h2 {
-  color: #2a9d8f;
-}
-
-.login-form {
   display: flex;
   flex-direction: column;
   gap: 10px;
+}
+.login-form h2 {
+  color: #2a9d8f;
+}
+.user-container {
+  color: #21867a;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .login-form input {
@@ -38,4 +41,14 @@
 
 .login-form button:hover {
   background-color: #21867a;
+}
+
+.user-container {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  margin: 0 auto;
+  text-align: center
 }
