--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -15,10 +15,52 @@
   color: #2a9d8f;
 }
 .user-container {
+  width: 100%;
+  max-width: 700px;
   color: #21867a;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.header {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  margin: 16px;
+  justify-content: space-evenly;
+}
+.header button{
+
+  border:0;
+  background-image: linear-gradient(
+      150deg,
+      #9500,
+      #09F,
+      #00DDFF
+  );
+  border-radius: 8px;
+  color:#fff;
+  display: flex;
+  font-size: 18px;
+  padding: 4px;
+  cursor: pointer;
+  transition: .3s;
+
+}
+
+.header button span{
+  background-color: #111;
+  padding: 16px 24px;
+  border-radius: 6px;
+  transition: .3s;
+}
+
+.header button:hover span {
+  background: none;
+}
+
+.header button:active {
+  transform: scale(0,9)
 }
 
 .login-form input {
