--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -16,7 +16,7 @@
 }
 .user-container {
   width: 100%;
-  max-width: 700px;
+  height: 100dvh;
   color: #21867a;
   display: flex;
   flex-direction: column;
@@ -26,8 +26,9 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  margin: 16px;
-  justify-content: space-evenly;
+  margin: 1rem;
+  justify-content: left;
+  gap: 1.5rem;
 }
 .header button{
 
@@ -62,7 +63,12 @@
 .header button:active {
   transform: scale(0,9)
 }
-
+.panel__container {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  margin: 2rem;
+}
 .login-form input {
   padding: 10px;
   border: 1px solid #ccc;
