--- a/src/components/NoteApp.css
+++ b/src/components/NoteApp.css
@@ -5,15 +5,18 @@
   width: 100%;
   max-width: 600px;
   height: 100%;
-  max-height: 300px;
+  max-height: 80vh;
   display: grid;
   grid-template-columns: 1fr 1fr;
-
 }
 
 .note-form {
   width: 100%;
   max-width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Estilo para el título */
