--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,15 @@
   box-sizing: border-box;
   /* outline: 1px solid red; */
 }
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  color: #333;
+
+  background-image: url(./assets/img/universo.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100dvh;
+}
